--- a/projeto_disciplina_parte2.ipynb
+++ b/projeto_disciplina_parte2.ipynb
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x193c967ac10>"
+       "<matplotlib.legend.Legend at 0x2ae74af9d30>"
       ]
      },
      "execution_count": 6,
@@ -531,7 +531,7 @@
      "text": [
       "WARNING:tensorflow:Layer lstm_1 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
       "WARNING:tensorflow:Layer lstm_2 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
-      "13/13 [==============================] - 0s 4ms/step\n"
+      "13/13 [==============================] - 0s 3ms/step\n"
      ]
     },
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -821,8 +821,7 @@
     "headings = ['MODEL', 'MAE.', 'MSE', 'RMSE', 'MAPE', 'MASE']\n",
     "fields = [5, 0, 1, 2, 3, 4]\n",
     "\n",
-    "align = [('^', '<'), ('^', '^'), ('^', '<'), ('^', '^'), ('^', '>'),\n",
-    "         ('^','^')]\n",
+    "align = [('^', '<'), ('^', '^'), ('^', '<'), ('^', '^'), ('^', '>'), ('^','^')]\n",
     "\n",
     "table(sys.stdout, data, fields, headings, align)"
    ]
