Changes on preprocessing.

--- a/projeto_disciplina_parte2.ipynb
+++ b/projeto_disciplina_parte2.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Study: Aluminium Historical Data with LSTM - Neural Networks and Deep Learning Fundamentals\n",
+    "# Author: Willian Oliveira\n",
+    "# Start: 14/10/2022\n",
+    "# Motivation: Answer to the second challenge of the discipline\n",
+    "# Study Status: On going"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
